@@ -121,6 +121,7 @@ metaDefaultValue = "Default value"
 metaTypedValue = "Typed as"
 metaRessourceAnalysis = "Ressource analysis"
 metaConstants = "Constants"
+metaUnformattedFloat = "Unformatted float value"
 publicConstant = "Public constant "
 protectedConstant = "Protected constant "
 privateConstant = "Private constant "
@@ -324,6 +325,7 @@ metaDefaultValue = "Default Wert"
 metaTypedValue = "Typisiert als"
 metaRessourceAnalysis = "Ressourcen Analyse"
 metaConstants = "Konstanten"
+metaUnformattedFloat = "Unformatierter Float Wert"
 publicConstant = "Public Konstante "
 protectedConstant = "Protected Konstante "
 privateConstant = "Private Konstante "
