@@ -100,4 +100,41 @@ class ProcessFloatTest extends AbstractHelper
         $fixture = 'abc';
         $this->assertFalse($processor->canHandle($model->setData($fixture)));
     }
+
+    /**
+     *
+     *
+     * @covers \Brainworxx\Krexx\Analyse\Routing\Process\ProcessFloat::handle
+     * @covers \Brainworxx\Krexx\Analyse\Routing\Process\ProcessFloat::formatFloat
+     */
+    public function testProcessFormat()
+    {
+        // Test the low value.
+        $processor = new ProcessFloat(Krexx::$pool);
+        $model = new Model(Krexx::$pool);
+        $fixture = 5.123456789E-10;
+        $model->setData($fixture);
+        $this->assertTrue($processor->canHandle($model));
+        $processor->handle($model);
+        $this->assertEquals('0.000000000512345679', $model->getNormal());
+        $this->assertEquals(['Unformatted float value' => '5.123456789E-10'], $model->getJson());
+
+        // Test the mid-level value.
+        $model = new Model(Krexx::$pool);
+        $fixture = 5.123456789E+10;
+        $model->setData($fixture);
+        $this->assertTrue($processor->canHandle($model));
+        $processor->handle($model);
+        $this->assertEquals('51234567890', $model->getNormal());
+        $this->assertEquals([], $model->getJson());
+
+        // Test the high value.
+        $model = new Model(Krexx::$pool);
+        $fixture = 5.123456789E+40;
+        $model->setData($fixture);
+        $this->assertTrue($processor->canHandle($model));
+        $processor->handle($model);
+        $this->assertEquals('5.123456789E+40', $model->getNormal());
+        $this->assertEquals([], $model->getJson());
+    }
 }
