@@ -1,4 +1,5 @@
 5.0.5
+- Added formatting for float values for better readability.
 
 5.0.4
 - Change: Made implicitly nullable parameter declarations explicitly nullable.
